--- a/w1_0Loading+Graphs+in+NetworkX.ipynb
+++ b/w1_0Loading+Graphs+in+NetworkX.ipynb
@@ -835,14 +835,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat: G_adjlist.txt: No such file or directory\n"
+      "\n",
+      "<!DOCTYPE HTML>\n",
+      "<html>\n",
+      "\n",
+      "<head>\n",
+      "    <meta charset=\"utf-8\">\n",
+      "\n",
+      "    <title>G_adjlist.txt (editing)</title>\n",
+      "    <link rel=\"shortcut icon\" type=\"image/x-icon\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/base/images/favicon.ico?v=97c6417ed01bdc0ae3ef32ae4894fd03\">\n",
+      "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\" />\n",
+      "    <link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/jquery-ui/themes/smoothness/jquery-ui.min.css?v=9b2c8d3489227115310662a343fce11c\" type=\"text/css\" />\n",
+      "    <link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/jquery-typeahead/dist/jquery.typeahead.min.css?v=7afb461de36accb1aa133a1710f5bc56\" type=\"text/css\" />\n",
+      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+      "    \n",
+      "    \n",
+      "<link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/codemirror/lib/codemirror.css?v=f25e9a9159e54b423b5a8dc4b1ab5c6e\">\n",
+      "<link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/codemirror/addon/dialog/dialog.css?v=c89dce10b44d2882a024e7befc2b63f5\">\n",
+      "\n",
+      "    <link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/static/style/style.min.css?v=29c09309dd70e7fe93378815e5f022ae\" type=\"text/css\"/>\n",
+      "    \n",
+      "\n",
+      "    <link rel=\"stylesheet\" href=\"/user/bghtxnyblnqwwcslbwsqbr/custom/custom.css\" type=\"text/css\" />\n",
+      "    <script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/es6-promise/promise.min.js?v=f004a16cb856e0ff11781d01ec5ca8fe\" type=\"text/javascript\" charset=\"utf-8\"></script>\n",
+      "    <script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/preact/index.js?v=5b98fce8b86ce059de89f9e728e16957\" type=\"text/javascript\"></script>\n",
+      "    <script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/proptypes/index.js?v=c40890eb04df9811fcc4d47e53a29604\" type=\"text/javascript\"></script>\n",
+      "    <script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/preact-compat/index.js?v=d376eb109a00b9b2e8c0d30782eb6df7\" type=\"text/javascript\"></script>\n",
+      "    <script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/components/requirejs/require.js?v=6da8be361b9ee26c5e721e76c6d4afce\" type=\"text/javascript\" charset=\"utf-8\"></script>\n",
+      "    <script>\n",
+      "      require.config({\n",
+      "          \n",
+      "          urlArgs: \"v=20171111130254\",\n",
+      "          \n",
+      "          baseUrl: '/user/bghtxnyblnqwwcslbwsqbr/static/',\n",
+      "          paths: {\n",
+      "            'auth/js/main': 'auth/js/main.min',\n",
+      "            custom : '/user/bghtxnyblnqwwcslbwsqbr/custom',\n",
+      "            nbextensions : '/user/bghtxnyblnqwwcslbwsqbr/nbextensions',\n",
+      "            kernelspecs : '/user/bghtxnyblnqwwcslbwsqbr/kernelspecs',\n",
+      "            underscore : 'components/underscore/underscore-min',\n",
+      "            backbone : 'components/backbone/backbone-min',\n",
+      "            jquery: 'components/jquery/jquery.min',\n",
+      "            bootstrap: 'components/bootstrap/js/bootstrap.min',\n",
+      "            bootstraptour: 'components/bootstrap-tour/build/js/bootstrap-tour.min',\n",
+      "            'jquery-ui': 'components/jquery-ui/ui/minified/jquery-ui.min',\n",
+      "            moment: 'components/moment/moment',\n",
+      "            codemirror: 'components/codemirror',\n",
+      "            termjs: 'components/xterm.js/dist/xterm',\n",
+      "            typeahead: 'components/jquery-typeahead/dist/jquery.typeahead.min',\n",
+      "          },\n",
+      "          map: { // for backward compatibility\n",
+      "              \"*\": {\n",
+      "                  \"jqueryui\": \"jquery-ui\",\n",
+      "              }\n",
+      "          },\n",
+      "          shim: {\n",
+      "            typeahead: {\n",
+      "              deps: [\"jquery\"],\n",
+      "              exports: \"typeahead\"\n",
+      "            },\n",
+      "            underscore: {\n",
+      "              exports: '_'\n",
+      "            },\n",
+      "            backbone: {\n",
+      "              deps: [\"underscore\", \"jquery\"],\n",
+      "              exports: \"Backbone\"\n",
+      "            },\n",
+      "            bootstrap: {\n",
+      "              deps: [\"jquery\"],\n",
+      "              exports: \"bootstrap\"\n",
+      "            },\n",
+      "            bootstraptour: {\n",
+      "              deps: [\"bootstrap\"],\n",
+      "              exports: \"Tour\"\n",
+      "            },\n",
+      "            \"jquery-ui\": {\n",
+      "              deps: [\"jquery\"],\n",
+      "              exports: \"$\"\n",
+      "            }\n",
+      "          },\n",
+      "          waitSeconds: 30,\n",
+      "      });\n",
+      "\n",
+      "      require.config({\n",
+      "          map: {\n",
+      "              '*':{\n",
+      "                'contents': 'services/contents',\n",
+      "              }\n",
+      "          }\n",
+      "      });\n",
+      "\n",
+      "      // error-catching custom.js shim.\n",
+      "      define(\"custom\", function (require, exports, module) {\n",
+      "          try {\n",
+      "              var custom = require('custom/custom');\n",
+      "              console.debug('loaded custom.js');\n",
+      "              return custom;\n",
+      "          } catch (e) {\n",
+      "              console.error(\"error loading custom.js\", e);\n",
+      "              return {};\n",
+      "          }\n",
+      "      })\n",
+      "    </script>\n",
+      "\n",
+      "    \n",
+      "    \n",
+      "\n",
+      "</head>\n",
+      "\n",
+      "<body class=\"edit_app \"\n",
+      " \n",
+      "data-base-url=\"/user/bghtxnyblnqwwcslbwsqbr/\"\n",
+      "data-file-path=\"G_adjlist.txt\"\n",
+      "\n",
+      "  \n",
+      " \n",
+      "\n",
+      "dir=\"ltr\">\n",
+      "\n",
+      "<noscript>\n",
+      "    <div id='noscript'>\n",
+      "      Jupyter Notebook requires JavaScript.<br>\n",
+      "      Please enable it to proceed.\n",
+      "  </div>\n",
+      "</noscript>\n",
+      "\n",
+      "<div id=\"header\">\n",
+      "  <div id=\"header-container\" class=\"container\">\n",
+      "  <div id=\"ipython_notebook\" class=\"nav navbar-brand pull-left\"><a href=\"/user/bghtxnyblnqwwcslbwsqbr/tree\" title='dashboard'>\n",
+      "<img src='/hub/logo' alt='Jupyter Notebook'/>\n",
+      "</a></div>\n",
+      "\n",
+      "  \n",
+      "\n",
+      "  \n",
+      "  \n",
+      "\n",
+      "    <span id=\"login_widget\">\n",
+      "      \n",
+      "        <button id=\"logout\" class=\"btn btn-sm navbar-btn\">Logout</button>\n",
+      "      \n",
+      "    </span>\n",
+      "\n",
+      "  \n",
+      "\n",
+      "  \n",
+      "\n",
+      "<a href='/hub/home'\n",
+      " class='btn btn-default btn-sm navbar-btn pull-right'\n",
+      " style='margin-right: 4px; margin-left: 2px;'\n",
+      ">\n",
+      "Control Panel</a>\n",
+      "\n",
+      "\n",
+      "  \n",
+      "\n",
+      "<span id=\"save_widget\" class=\"pull-left save_widget\">\n",
+      "    <span class=\"filename\"></span>\n",
+      "    <span class=\"last_modified\"></span>\n",
+      "</span>\n",
+      "\n",
+      "\n",
+      "  </div>\n",
+      "  <div class=\"header-bar\"></div>\n",
+      "\n",
+      "  \n",
+      "\n",
+      "<div id=\"menubar-container\" class=\"container\">\n",
+      "  <div id=\"menubar\">\n",
+      "    <div id=\"menus\" class=\"navbar navbar-default\" role=\"navigation\">\n",
+      "      <div class=\"container-fluid\">\n",
+      "          <p  class=\"navbar-text indicator_area\">\n",
+      "          <span id=\"current-mode\" >current mode</span>\n",
+      "          </p>\n",
+      "        <button type=\"button\" class=\"btn btn-default navbar-toggle\" data-toggle=\"collapse\" data-target=\".navbar-collapse\">\n",
+      "          <i class=\"fa fa-bars\"></i>\n",
+      "          <span class=\"navbar-text\">Menu</span>\n",
+      "        </button>\n",
+      "        <ul class=\"nav navbar-nav navbar-right\">\n",
+      "          <li id=\"notification_area\"></li>\n",
+      "        </ul>\n",
+      "        <div class=\"navbar-collapse collapse\">\n",
+      "          <ul class=\"nav navbar-nav\">\n",
+      "            <li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">File</a>\n",
+      "              <ul id=\"file-menu\" class=\"dropdown-menu\">\n",
+      "                <li id=\"new-file\"><a href=\"#\">New</a></li>\n",
+      "                <li id=\"save-file\"><a href=\"#\">Save</a></li>\n",
+      "                <li id=\"rename-file\"><a href=\"#\">Rename</a></li>\n",
+      "                <li id=\"download-file\"><a href=\"#\">Download</a></li>\n",
+      "              </ul>\n",
+      "            </li>\n",
+      "            <li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">Edit</a>\n",
+      "              <ul id=\"edit-menu\" class=\"dropdown-menu\">\n",
+      "                <li id=\"menu-find\"><a href=\"#\">Find</a></li>\n",
+      "                <li id=\"menu-replace\"><a href=\"#\">Find &amp; Replace</a></li>\n",
+      "                <li class=\"divider\"></li>\n",
+      "                <li class=\"dropdown-header\">Key Map</li>\n",
+      "                <li id=\"menu-keymap-default\"><a href=\"#\">Default<i class=\"fa\"></i></a></li>\n",
+      "                <li id=\"menu-keymap-sublime\"><a href=\"#\">Sublime Text<i class=\"fa\"></i></a></li>\n",
+      "                <li id=\"menu-keymap-vim\"><a href=\"#\">Vim<i class=\"fa\"></i></a></li>\n",
+      "                <li id=\"menu-keymap-emacs\"><a href=\"#\">emacs<i class=\"fa\"></i></a></li>\n",
+      "              </ul>\n",
+      "            </li>\n",
+      "            <li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">View</a>\n",
+      "              <ul id=\"view-menu\" class=\"dropdown-menu\">\n",
+      "              <li id=\"toggle_header\" title=\"Show/Hide the logo and notebook title (above menu bar)\">\n",
+      "              <a href=\"#\">Toggle Header</a></li>\n",
+      "              <li id=\"menu-line-numbers\"><a href=\"#\">Toggle Line Numbers</a></li>\n",
+      "              </ul>\n",
+      "            </li>\n",
+      "            <li class=\"dropdown\"><a href=\"#\" class=\"dropdown-toggle\" data-toggle=\"dropdown\">Language</a>\n",
+      "              <ul id=\"mode-menu\" class=\"dropdown-menu\">\n",
+      "              </ul>\n",
+      "            </li>\n",
+      "          </ul>\n",
+      "        </div>\n",
+      "      </div>\n",
+      "    </div>\n",
+      "  </div>\n",
+      "</div>\n",
+      "\n",
+      "<div class=\"lower-header-bar\"></div>\n",
+      "\n",
+      "\n",
+      "</div>\n",
+      "\n",
+      "<div id=\"site\">\n",
+      "\n",
+      "\n",
+      "<div id=\"texteditor-backdrop\">\n",
+      "<div id=\"texteditor-container\" class=\"container\"></div>\n",
+      "</div>\n",
+      "\n",
+      "\n",
+      "</div>\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "    \n",
+      "\n",
+      "\n",
+      "<script src=\"/user/bghtxnyblnqwwcslbwsqbr/static/edit/js/main.min.js?v=7eb6af843396244a81afb577aedbaf89\" type=\"text/javascript\" charset=\"utf-8\"></script>\n",
+      "\n",
+      "\n",
+      "<script type='text/javascript'>\n",
+      "  function _remove_token_from_url() {\n",
+      "    if (window.location.search.length <= 1) {\n",
+      "      return;\n",
+      "    }\n",
+      "    var search_parameters = window.location.search.slice(1).split('&');\n",
+      "    for (var i = 0; i < search_parameters.length; i++) {\n",
+      "      if (search_parameters[i].split('=')[0] === 'token') {\n",
+      "        // remote token from search parameters\n",
+      "        search_parameters.splice(i, 1);\n",
+      "        var new_search = '';\n",
+      "        if (search_parameters.length) {\n",
+      "          new_search = '?' + search_parameters.join('&');\n",
+      "        }\n",
+      "        var new_url = window.location.origin + \n",
+      "                      window.location.pathname + \n",
+      "                      new_search + \n",
+      "                      window.location.hash;\n",
+      "        window.history.replaceState({}, \"\", new_url);\n",
+      "        return;\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "  _remove_token_from_url();\n",
+      "</script>\n",
+      "</body>\n",
+      "\n",
+      "</html>\n"
      ]
     }
    ],
@@ -859,9 +1132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-234b56f3277f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mG2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_adjlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'G_adjlist.txt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnodetype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mG2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<decorator-gen-464>\u001b[0m in \u001b[0;36mread_adjlist\u001b[0;34m(path, comments, delimiter, create_using, nodetype, encoding)\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\eunjaejang\\Anaconda3\\lib\\site-packages\\networkx\\utils\\decorators.py\u001b[0m in \u001b[0;36m_open_file\u001b[0;34m(func, *args, **kwargs)\u001b[0m\n\u001b[1;32m    222\u001b[0m         \u001b[1;31m# Finally, we call the original function, making sure to close the fobj.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnew_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mclose_fobj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\eunjaejang\\Anaconda3\\lib\\site-packages\\networkx\\readwrite\\adjlist.py\u001b[0m in \u001b[0;36mread_adjlist\u001b[0;34m(path, comments, delimiter, create_using, nodetype, encoding)\u001b[0m\n\u001b[1;32m    302\u001b[0m                          \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdelimiter\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    303\u001b[0m                          \u001b[0mcreate_using\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_using\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 304\u001b[0;31m                          nodetype=nodetype)\n\u001b[0m\u001b[1;32m    305\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    306\u001b[0m \u001b[1;31m# fixture for nose tests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\eunjaejang\\Anaconda3\\lib\\site-packages\\networkx\\readwrite\\adjlist.py\u001b[0m in \u001b[0;36mparse_adjlist\u001b[0;34m(lines, comments, delimiter, create_using, nodetype)\u001b[0m\n\u001b[1;32m    208\u001b[0m             \u001b[1;32mcontinue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    209\u001b[0m         \u001b[0mvlist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdelimiter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 210\u001b[0;31m         \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvlist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    211\u001b[0m         \u001b[1;31m# convert types\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnodetype\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
    "source": [
     "G2 = nx.read_adjlist('G_adjlist.txt', nodetype=int)\n",
     "G2.edges()"
