--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -28,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -101,17 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_one():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    EMC = pd.read_csv('Employee_Movie_Choices.txt', sep='\\t')\n",
+    "    EMC_G = nx.from_pandas_dataframe(EMC, '#Employee', 'Movie')\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return EMC_G"
    ]
   },
   {
@@ -127,17 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_two():\n",
     "    \n",
     "    # Your Code Here\n",
+    "    EMC_G = answer_one()\n",
+    "    for node in EMC_G.nodes():\n",
+    "        if node in employees:\n",
+    "            EMC_G.add_node(node, type=\"employee\")\n",
+    "        else:\n",
+    "            EMC_G.add_node(node, type=\"movie\")\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return EMC_G\n"
    ]
   },
   {
@@ -155,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_three():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    B = answer_two()\n",
+    "    weighted_proj = bipartite.weighted_projected_graph(B, employees)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return weighted_proj"
    ]
   },
   {
@@ -185,21 +187,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_four():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    Rel = nx.read_edgelist('Employee_Relationships.txt',\n",
+    "                           data=[('relationship_score', int)])\n",
+    "    Rel_df = pd.DataFrame(list(Rel.edges(data=True)),\n",
+    "                          columns=['From', 'To', 'relationship_score'])\n",
+    "    G = answer_three()\n",
+    "    G_df = pd.DataFrame(list(G.edges(data=True)), columns=['From', 'To', 'movies_score'])\n",
+    "    G_copy_df = G_df.copy()\n",
+    "    G_copy_df['From_'] = G_copy_df['To']\n",
+    "    G_copy_df['To_'] = G_copy_df['From']\n",
+    "    G_copy_df.drop(['To', 'From'], axis=1, inplace=True)\n",
+    "    G_copy_df.rename(columns={\"From_\": \"From\", \"To_\": \"To\"}, inplace=True)\n",
+    "    G_final_df = pd.concat([G_df, G_copy_df])\n",
+    "    final_df = pd.merge(G_final_df, Rel_df, on = ['From', 'To'], how='right')\n",
+    "    final_df['movies_score'] = final_df['movies_score'].map(lambda x: x['weight'] if type(x)==dict else None)\n",
+    "    final_df['relationship_score'] = final_df['relationship_score'].map(lambda x: x['relationship_score'])\n",
+    "    final_df['movies_score'].fillna(value=0, inplace=True)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    OUT = final_df['movies_score'].corr(final_df['relationship_score'])\n",
+    "    \n",
+    "    return OUT"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "coursera": {
    "course_slug": "python-social-network-analysis",
    "graded_item_id": "YNa9b",
@@ -207,7 +226,7 @@
    "part_id": "VbyiB"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
