--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -33,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -57,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_one():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    degree_centrality = nx.degree_centrality(G1)[100]\n",
+    "    clsnss_centrality = nx.closeness_centrality(G1)[100]\n",
+    "    btwn_centrality = nx.betweenness_centrality(G1, endpoints=False, normalized=True)[100]\n",
+    "    return degree_centrality, clsnss_centrality, btwn_centrality"
    ]
   },
   {
@@ -92,9 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -102,8 +99,8 @@
     "def answer_two():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    degree = nx.degree_centrality(G1)\n",
+    "    return max(degree.keys(), key=lambda x:degree[x])"
    ]
   },
   {
@@ -121,9 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -131,8 +127,8 @@
     "def answer_three():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    closeness = nx.closeness_centrality(G1)\n",
+    "    return max(closeness.keys(), key=lambda x:closeness[x])"
    ]
   },
   {
@@ -148,17 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_four():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    betweeness = nx.betweenness_centrality(G1)\n",
+    "    return max(betweeness.keys(), key=lambda x:betweeness[x])"
    ]
   },
   {
@@ -174,10 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "G2 = nx.read_gml('blogs.gml')"
@@ -196,17 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_five():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    pr = nx.pagerank(G2, alpha=0.85)\n",
+    "    return pr['realclearpolitics.com']"
    ]
   },
   {
@@ -222,17 +212,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_six():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    pr = nx.pagerank(G2, alpha=0.85)\n",
+    "    return sorted(pr.keys(), key=lambda key:pr[key], reverse=True)[:5]"
    ]
   },
   {
@@ -250,17 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_seven():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    hits = nx.hits(G2)\n",
+    "    node = 'realclearpolitics.com'\n",
+    "    return hits[0][node], hits[1][node]"
    ]
   },
   {
@@ -278,17 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_eight():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    hits = nx.hits(G2)\n",
+    "    hubs = hits[0]\n",
+    "    return sorted(hubs.keys(), key=lambda key:hubs[key], reverse=True)[:5]"
    ]
   },
   {
@@ -304,17 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_nine():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    hits = nx.hits(G2)\n",
+    "    authorities = hits[1]\n",
+    "    return sorted(authorities.keys(), key=lambda key:authorities[key], reverse=True)[:5]"
    ]
   }
  ],
@@ -326,7 +311,7 @@
    "part_id": "cZ7Jg"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
