--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
     "\n",
     "# This line must be commented out when submitting to the autograder\n",
     "#!head email_network.txt"
@@ -48,17 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_one():\n",
     "    \n",
     "    # Your Code Here\n",
+    "    # data = pd.read_csv('email_network.txt', delimiter='\\t')\n",
+    "    G = nx.read_edgelist('email_network.txt', delimiter='\\t',\n",
+    "                         data=[('timestamp', int)], create_using=nx.MultiDiGraph())\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return G"
    ]
   },
   {
@@ -74,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_two():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_one()\n",
+    "    G_len = len(G.nodes()), len(G.edges())\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return G_len"
    ]
   },
   {
@@ -110,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_three():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_one()\n",
+    "    OUT = nx.is_strongly_connected(G), nx.is_connected(G.to_undirected())\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return OUT"
    ]
   },
   {
@@ -136,9 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -146,8 +146,10 @@
     "def answer_four():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_one()\n",
+    "    wccs = nx.weakly_connected_components(G)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return len(max(wccs, key=len))"
    ]
   },
   {
@@ -163,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_five():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_one()\n",
+    "    sccs = nx.strongly_connected_components(G)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return len(max(sccs, key=len))"
    ]
   },
   {
@@ -190,17 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_six():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_one()\n",
+    "    scc_subs = nx.strongly_connected_component_subgraphs(G)\n",
+    "    G_sc = max(scc_subs, key=len)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return G_sc"
    ]
   },
   {
@@ -216,17 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_seven():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_six()\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return nx.average_shortest_path_length(G)"
    ]
   },
   {
@@ -242,17 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_eight():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_six()\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return nx.diameter(G)"
    ]
   },
   {
@@ -268,17 +269,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_nine():\n",
     "       \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    G = answer_six()\n",
+    "    return set(nx.periphery(G))"
    ]
   },
   {
@@ -294,17 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_ten():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_six()\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return set(nx.center(G))"
    ]
   },
   {
@@ -323,17 +321,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_eleven():\n",
     "        \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    G = answer_six()\n",
+    "    d = nx.diameter(G)\n",
+    "    peripheries = nx.periphery(G)\n",
+    "    max_count = -1\n",
+    "    result_node = None\n",
+    "    for node in peripheries:\n",
+    "        # reset max_count to see if there is\n",
+    "        # a greater version\n",
+    "        sp = nx.shortest_path_length(G, node)\n",
+    "        count = list(sp.values()).count(d)\n",
+    "        if count > max_count:\n",
+    "            result_node = node\n",
+    "            max_count = count\n",
+    "    return result_node, max_count"
    ]
   },
   {
@@ -349,17 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_twelve():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_six()\n",
+    "    center = nx.center(G)[0]\n",
+    "    node = answer_eleven()[0]\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return len(nx.minimum_node_cut(G, center, node))"
    ]
   },
   {
@@ -375,17 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_thirteen():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_six()\n",
+    "    undir_subgraph = G.to_undirected()\n",
+    "    G_un = nx.Graph(undir_subgraph)\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return G_un"
    ]
   },
   {
@@ -401,17 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def answer_fourteen():\n",
     "        \n",
     "    # Your Code Here\n",
+    "    G = answer_thirteen()\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return nx.transitivity(G), nx.average_clustering(G)"
    ]
   }
  ],
@@ -423,7 +432,7 @@
    "part_id": "E9gn5"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
