--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -20,10 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -45,11 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<networkx.classes.graph.Graph at 0x26a9a175cf8>,\n",
+       " <networkx.classes.graph.Graph at 0x26a9f43cc50>,\n",
+       " <networkx.classes.graph.Graph at 0x26a9f43cc88>,\n",
+       " <networkx.classes.graph.Graph at 0x26a9f43ccc0>,\n",
+       " <networkx.classes.graph.Graph at 0x26a9f43ccf8>]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "P1_Graphs = pickle.load(open('A4_graphs','rb'))\n",
     "P1_Graphs"
@@ -72,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def graph_identification():\n",
     "    \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    degrees = G.degree()\n",
+    "    degree_values = sorted(set(degrees.values()))\n",
+    "    histogram = [list(degrees.values()).count(i)/float(nx.number_of_nodes( G)) for i in degree_values]\n",
+    "    return histogram"
    ]
   },
   {
@@ -102,11 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graph' object has no attribute '_node'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-932834d45048>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mG\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_gpickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'email_prediction.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\networkx\\classes\\function.py\u001b[0m in \u001b[0;36minfo\u001b[1;34m(G, n)\u001b[0m\n\u001b[0;32m    548\u001b[0m         \u001b[0mtype_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    549\u001b[0m         \u001b[0minfo\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\"Type: %s\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;34m\",\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 550\u001b[1;33m         \u001b[0minfo\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\"Number of nodes: %d\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumber_of_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    551\u001b[0m         \u001b[0minfo\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\"Number of edges: %d\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumber_of_edges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    552\u001b[0m         \u001b[0mnnodes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumber_of_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\networkx\\classes\\graph.py\u001b[0m in \u001b[0;36mnumber_of_nodes\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    776\u001b[0m         \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    777\u001b[0m         \"\"\"\n\u001b[1;32m--> 778\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    779\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    780\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Graph' object has no attribute '_node'"
+     ]
+    }
+   ],
    "source": [
     "G = nx.read_gpickle('email_prediction.txt')\n",
     "\n",
@@ -154,11 +177,45 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "def salary_predictions():\n",
     "    \n",
     "    # Your Code Here\n",
+    "    def is_management(node):\n",
+    "        managementSalary = node[1]['ManagementSalary']\n",
+    "        if managementSalary == 0:\n",
+    "            return 0\n",
+    "        elif managementSalary == 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "    df = pd.DataFrame(index=G.nodes())\n",
+    "    df['clustering'] = pd.Series(nx.clustering(G))\n",
+    "    df['degree'] = pd.Series(G.degree())\n",
+    "    df['degree_centrality'] = pd.Series(nx.degree_centrality(G))\n",
+    "    df['closeness'] = pd.Series(nx.closeness_centrality(G, normalized=True))\n",
+    "    df['betweeness'] = pd.Series(nx.betweenness_centrality(G, normalized=True))\n",
+    "    df['pr'] = pd.Series(nx.pagerank(G))\n",
+    "    df['is_management'] = pd.Series([is_management(node) for node in G.nodes(data=True)])\n",
+    "    df_train = df[~pd.isnull(df['is_management'])]\n",
+    "    df_test = df[pd.isnull(df['is_management'])]\n",
+    "    features = ['clustering', 'degree', 'degree_centrality', 'closeness', 'betweeness', 'pr']\n",
+    "    X_train = df_train[features]\n",
+    "    Y_train = df_train['is_management']\n",
+    "    X_test = df_test[features]\n",
+    "    scaler = MinMaxScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "    clf = MLPClassifier(hidden_layer_sizes = [10, 5], alpha = 5,\n",
+    "                       random_state = 0, solver='lbfgs', verbose=0)\n",
+    "    clf.fit(X_train_scaled, Y_train)\n",
+    "    test_proba = clf.predict_proba(X_test_scaled)[:, 1]\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return pd.Series(test_proba,X_test.index)"
    ]
   },
   {
@@ -221,11 +278,43 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "def new_connections_predictions():\n",
     "    \n",
     "    # Your Code Here\n",
+    "    for node in G.nodes():\n",
+    "        G.node[node]['community'] = G.node[node]['Department']\n",
+    "    preferential_attachment = list(nx.preferential_attachment(G))\n",
+    "    df = pd.DataFrame(index=[(x[0], x[1]) for x in preferential_attachment])\n",
+    "    df['preferential_attachment'] = [x[2] for x in preferential_attachment]\n",
+    "    cn_soundarajan_hopcroft = list(nx.cn_soundarajan_hopcroft(G))\n",
+    "    df_cn_soundarajan_hopcroft = pd.DataFrame(index=[(x[0], x[1]) for x in cn_soundarajan_hopcroft])\n",
+    "    df_cn_soundarajan_hopcroft['cn_soundarajan_hopcroft'] = [x[2] for x in cn_soundarajan_hopcroft]\n",
+    "    df = df.join(df_cn_soundarajan_hopcroft,how='outer')\n",
+    "    df['cn_soundarajan_hopcroft'] = df['cn_soundarajan_hopcroft'].fillna(value=0)\n",
+    "    df['resource_allocation_index'] = [x[2] for x in list(nx.resource_allocation_index(G))]\n",
+    "    df['jaccard_coefficient'] = [x[2] for x in list(nx.jaccard_coefficient(G))]\n",
+    "    df = future_connections.join(df,how='outer')\n",
+    "    df_train = df[~pd.isnull(df['Future Connection'])]\n",
+    "    df_test = df[pd.isnull(df['Future Connection'])]\n",
+    "    features = ['cn_soundarajan_hopcroft', 'preferential_attachment', 'resource_allocation_index', 'jaccard_coefficient']\n",
+    "    X_train = df_train[features]\n",
+    "    Y_train = df_train['Future Connection']\n",
+    "    X_test = df_test[features]\n",
+    "    scaler = MinMaxScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "    clf = MLPClassifier(hidden_layer_sizes = [10, 5], alpha = 5,\n",
+    "                       random_state = 0, solver='lbfgs', verbose=0)\n",
+    "    clf.fit(X_train_scaled, Y_train)\n",
+    "    test_proba = clf.predict_proba(X_test_scaled)[:, 1]\n",
+    "    predictions = pd.Series(test_proba,X_test.index)\n",
+    "    target = future_connections[pd.isnull(future_connections['Future Connection'])]\n",
+    "    target['prob'] = [predictions[x] for x in target.index]\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return target['prob']"
    ]
   }
  ],
@@ -237,7 +326,7 @@
    "part_id": "E2zRG"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
