--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -90,10 +90,24 @@
     "def graph_identification():\n",
     "    \n",
     "    # Your Code Here\n",
-    "    degrees = G.degree()\n",
-    "    degree_values = sorted(set(degrees.values()))\n",
-    "    histogram = [list(degrees.values()).count(i)/float(nx.number_of_nodes( G)) for i in degree_values]\n",
-    "    return histogram"
+    "    def degree_distribution(G):\n",
+    "        degrees = G.degree()\n",
+    "        degree_values = sorted(set(degrees.values()))\n",
+    "        histogram = [list(degrees.values()).count(i)/float(nx.number_of_nodes( G)) for i in degree_values]\n",
+    "        return histogram\n",
+    "    \n",
+    "    methods = []\n",
+    "    for G in P1_Graphs:\n",
+    "        clustering = nx.average_clustering(G)\n",
+    "        shortest_path = nx.average_shortest_path_length(G)\n",
+    "        degree_hist = degree_distribution(G)\n",
+    "        if len(degree_hist)>10:\n",
+    "            methods.append('PA')\n",
+    "        elif clustering < 0.1:\n",
+    "            methods.append('SW_H')\n",
+    "        else:\n",
+    "            methods.append('SW_L')\n",
+    "    return methods"
    ]
   },
   {
